# mcp-apps/ask-sac/sac-connector-swagger.json
@@ -16,6 +16,18 @@
   "produces": [
     "application/json"
   ],
+  "securityDefinitions": {
+    "ApiKeyAuth": {
+      "type": "apiKey",
+      "name": "x-api-key",
+      "in": "header"
+    }
+  },
+  "security": [
+    {
+      "ApiKeyAuth": []
+    }
+  ],
   "paths": {
     "/health": {
       "get": {
